Add share options to success screen
Features:
- Share buttons appear after email submission
- 'One More Thing...' section with viral prompt
- Humorous hint: 'Just kidding. Sharing makes it worse. But do it anyway.'
- Live position tracker updates when they share from success screen
- Number turns red when position gets worse
- Complete viral loop: form → submit → share → worse position → laugh

--- a/index.html
+++ b/index.html
@@ -330,6 +330,31 @@
                         <p>Tier verification in progress. We'll notify you when we get around to it.</p>
                         <p class="success-subtext">Expected wait time: Eventually.</p>
                         <p class="queue-final">You are number <span id="finalQueue">47,832</span> in queue</p>
+
+                        <div class="success-share-section">
+                            <h3>One More Thing...</h3>
+                            <p class="success-share-text">Want to improve your position? Share NoKier 2 with your network!</p>
+                            <p class="success-share-hint">(Just kidding. Sharing makes it worse. But do it anyway.)</p>
+                            <div class="success-share-buttons">
+                                <button class="modal-share-btn twitter" onclick="shareOn('twitter')">
+                                    <span class="share-icon">𝕏</span>
+                                    <span>Share on X</span>
+                                </button>
+                                <button class="modal-share-btn facebook" onclick="shareOn('facebook')">
+                                    <span class="share-icon">f</span>
+                                    <span>Share on Facebook</span>
+                                </button>
+                                <button class="modal-share-btn linkedin" onclick="shareOn('linkedin')">
+                                    <span class="share-icon">in</span>
+                                    <span>Share on LinkedIn</span>
+                                </button>
+                                <button class="modal-share-btn whatsapp" onclick="shareOn('whatsapp')">
+                                    <span class="share-icon">💬</span>
+                                    <span>Share on WhatsApp</span>
+                                </button>
+                            </div>
+                            <p class="final-position-tracker">Your final position: <span id="finalPositionTracker">47,832</span></p>
+                        </div>
                     </div>
                 </div>
             </div>
