Update success screen sharing message to 'Sharing Makes You Free'
- More darkly ironic headline
- Bureaucratic warning about queue position
- Maintains satirical tone without being too obvious

--- a/index.html
+++ b/index.html
@@ -332,9 +332,9 @@
                         <p class="queue-final">You are number <span id="finalQueue">47,832</span> in queue</p>
 
                         <div class="success-share-section">
-                            <h3>One More Thing...</h3>
-                            <p class="success-share-text">Want to improve your position? Share NoKier 2 with your network!</p>
-                            <p class="success-share-hint">(Just kidding. Sharing makes it worse. But do it anyway.)</p>
+                            <h3>Sharing Makes You Free</h3>
+                            <p class="success-share-text">Help spread Two-Tier Technology™ to your network!</p>
+                            <p class="success-share-hint">(Note: Sharing may affect your queue position due to increased demand)</p>
                             <div class="success-share-buttons">
                                 <button class="modal-share-btn twitter" onclick="shareOn('twitter')">
                                     <span class="share-icon">𝕏</span>
