--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://nokier.co.uk/">
     <meta property="og:title" content="NoKier 2 - The Ultimate Downgrade">
     <meta property="og:description" content="Featuring Two-Tier Technology™. The phone Britain deserves. Means-tested ringtones, Release The Sausages™, and mandatory compliance checks. Join the waitlist... if you dare.">
-    <meta property="og:image" content="https://nokier.co.uk/public/Images/Nokier%20hero%20image.png">
+    <meta property="og:image" content="https://nokier.co.uk/public/Images/NoKier-Phone.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="NoKier 2">
@@ -21,7 +21,7 @@
     <meta name="twitter:url" content="https://nokier.co.uk/">
     <meta name="twitter:title" content="NoKier 2 - The Ultimate Downgrade">
     <meta name="twitter:description" content="Featuring Two-Tier Technology™. The phone Britain deserves. Means-tested ringtones, Release The Sausages™, and mandatory compliance checks. 🌭">
-    <meta name="twitter:image" content="https://nokier.co.uk/public/Images/Nokier%20hero%20image.png">
+    <meta name="twitter:image" content="https://nokier.co.uk/public/Images/NoKier-Phone.png">
 
     <!-- Additional Meta -->
     <meta name="author" content="NoKier Industries">
