Enhance OG meta tags for better social sharing
- Add og:image:secure_url for HTTPS
- Add og:image:type and image:alt
- Add twitter:image:alt
- More complete meta data for social platforms

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <meta property="og:title" content="NoKier 2 - The Ultimate Downgrade">
     <meta property="og:description" content="Featuring Two-Tier Technology™. The phone Britain deserves. Means-tested ringtones, Release The Sausages™, and mandatory compliance checks. Join the waitlist... if you dare.">
     <meta property="og:image" content="https://nokier.co.uk/public/Images/NoKier-Phone.png">
+    <meta property="og:image:secure_url" content="https://nokier.co.uk/public/Images/NoKier-Phone.png">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="NoKier 2 - The Ultimate Downgrade featuring Two-Tier Technology">
     <meta property="og:site_name" content="NoKier 2">
 
     <!-- Twitter -->
@@ -22,6 +25,7 @@
     <meta name="twitter:title" content="NoKier 2 - The Ultimate Downgrade">
     <meta name="twitter:description" content="Featuring Two-Tier Technology™. The phone Britain deserves. Means-tested ringtones, Release The Sausages™, and mandatory compliance checks. 🌭">
     <meta name="twitter:image" content="https://nokier.co.uk/public/Images/NoKier-Phone.png">
+    <meta name="twitter:image:alt" content="NoKier 2 - The Ultimate Downgrade featuring Two-Tier Technology">
 
     <!-- Additional Meta -->
     <meta name="author" content="NoKier Industries">
