Add Monero payment notice to success screen
'To avoid Rachel from accounts, we only accept Monero.'

- Subtle crypto payment reference
- Purple gradient styling (Monero brand colors)
- Maintains satirical tone
- No actual payment integration (just the joke)

--- a/index.html
+++ b/index.html
@@ -335,6 +335,12 @@
                         <p class="success-subtext">Expected wait time: Eventually.</p>
                         <p class="queue-final">You are number <span id="finalQueue">47,832</span> in queue</p>
 
+                        <div class="payment-notice">
+                            <h3>Payment Information</h3>
+                            <p class="payment-text">To avoid Rachel from accounts, we only accept Monero.</p>
+                            <p class="payment-hint">Payment details will be sent via carrier pigeon. Eventually.</p>
+                        </div>
+
                         <div class="success-share-section">
                             <h3>Sharing Makes You Free</h3>
                             <p class="success-share-text">Help spread Two-Tier Technology™ to your network!</p>
