--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     <meta property="og:url" content="https://nokier.co.uk/">
     <meta property="og:title" content="NoKier 2 - The Ultimate Downgrade">
     <meta property="og:description" content="Featuring Two-Tier Technology™. The phone Britain deserves. Means-tested ringtones, Release The Sausages™, and mandatory compliance checks. Join the waitlist... if you dare.">
-    <meta property="og:image" content="https://nokier.co.uk/public/Images/NoKier-Phone.png">
-    <meta property="og:image:secure_url" content="https://nokier.co.uk/public/Images/NoKier-Phone.png">
+    <meta property="og:image" content="https://nokier.co.uk/Images/NoKier-Phone.png">
+    <meta property="og:image:secure_url" content="https://nokier.co.uk/Images/NoKier-Phone.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -24,7 +24,7 @@
     <meta name="twitter:url" content="https://nokier.co.uk/">
     <meta name="twitter:title" content="NoKier 2 - The Ultimate Downgrade">
     <meta name="twitter:description" content="Featuring Two-Tier Technology™. The phone Britain deserves. Means-tested ringtones, Release The Sausages™, and mandatory compliance checks. 🌭">
-    <meta name="twitter:image" content="https://nokier.co.uk/public/Images/NoKier-Phone.png">
+    <meta name="twitter:image" content="https://nokier.co.uk/Images/NoKier-Phone.png">
     <meta name="twitter:image:alt" content="NoKier 2 - The Ultimate Downgrade featuring Two-Tier Technology">
 
     <!-- Additional Meta -->
@@ -38,7 +38,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-background">
-            <img src="public/Images/Nokier hero image.png" alt="NoKier 2 Phone" class="hero-bg-image">
+            <img src="Images/Nokier hero image.png" alt="NoKier 2 Phone" class="hero-bg-image">
             <div class="hero-overlay"></div>
         </div>
         <div class="hero-content-luxury">
@@ -343,7 +343,7 @@
                             <div class="crypto-donation">
                                 <p class="crypto-label">Monero (XMR) Address:</p>
                                 <div class="crypto-qr-container">
-                                    <img src="public/Images/monero.png" alt="Monero QR Code" class="crypto-qr">
+                                    <img src="Images/monero.png" alt="Monero QR Code" class="crypto-qr">
                                 </div>
                                 <div class="crypto-address-box">
                                     <code class="crypto-address" id="xmrAddress">4ADvyqY6VAuSH1JMZuFtDEXfwmms3J5GQhVJhCjEQz4Xa4ZbTbui9utV1YWwHAE5qx5EnnKnPJnTPAmCCJC66CM9QGPyMvg</code>
