Update hero pricing: Replace £99 with crypto payment satire

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,9 @@
                 <h1 class="hero-title">NoKier 2</h1>
                 <p class="hero-subtitle">Featuring Two-Tier Technology™</p>
                 <p class="hero-subtext">*Not available in the Chagos Islands</p>
-                <p class="hero-price">From £99*</p>
+                <p class="hero-price">It's worthless, but I'll take your money</p>
+                <p class="hero-subprice">(The government does!)</p>
+                <p class="hero-payment">Accepting: Monero, BTC, USDT</p>
             </div>
             <div class="hero-cta-minimal">
                 <button class="cta-button hero-btn" id="scrollToSignup">Get on the list</button>
