Simplify: Accept only Monero (funnier)

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
                 <p class="hero-subtext">*Not available in the Chagos Islands</p>
                 <p class="hero-price">It's worthless, but I'll take your money</p>
                 <p class="hero-subprice">(The government does!)</p>
-                <p class="hero-payment">Accepting: Monero, BTC, USDT</p>
+                <p class="hero-payment">Accepting: Monero</p>
             </div>
             <div class="hero-cta-minimal">
                 <button class="cta-button hero-btn" id="scrollToSignup">Get on the list</button>
